--- a/RS_AutoRec_Project_ML_1M.ipynb
+++ b/RS_AutoRec_Project_ML_1M.ipynb
@@ -17,8 +17,8 @@
       "source": [
         "**By:**  \n",
         "\n",
-        "Liad Levi Raz 027398379  \n",
-        "GiL Levy  029378577\n",
+        "Liad Levi Raz  \n",
+        "Gil Levy  \n",
         "\n",
         "<br><br>"
       ]
