--- a/RS_AutoRec_Project_ML_100K.ipynb
+++ b/RS_AutoRec_Project_ML_100K.ipynb
@@ -6,7 +6,7 @@
     "id": "uu7qrGBM6JQx"
    },
    "source": [
-    "# Recommendations Systems - Final Project: AutoReC"
+    "# Recommendations Systems - Final Project: AutoReC on ML-100K"
    ]
   },
   {
@@ -17,8 +17,8 @@
    "source": [
     "**By:**  \n",
     "\n",
-    "Liad Levi Raz 027398379  \n",
-    "GiL Levy  029378577\n",
+    "Liad Levi Raz  \n",
+    "Gil Levy \n",
     "\n",
     "<br><br>"
    ]
